--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack2-react-sass-env-boilerplate",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0-alpha.0",
   "main": "index.js",
   "private": false,
   "dependencies": {
@@ -9,7 +9,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^6.18.0",
+    "babel-preset-env": "^1.2.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-optimize": "^1.0.1",
     "cross-env": "^3.1.4",
