--- a/.babelrc
+++ b/.babelrc
@@ -17,11 +17,13 @@
     "development": {
       "presets": ["react", [
         "env", {
-            "debug": true,
+            "debug": false,
             "modules": false,
             "useBuiltIns": true,
             "targets": {
-              "browsers": "last 1 version"
+              "browsers": {
+                "chrome": ">=56"
+              }
             }
           }
         ]
