--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
   "name": "webpack2-react-sass-env-boilerplate",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.0",
   "main": "index.js",
   "private": false,
   "dependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.20.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-react-optimize": "^1.0.1",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.5",
-    "file-loader": "^0.9.0",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "group-css-media-queries-loader": "^1.0.0",
     "modernizr-webpack-plugin": "^1.0.5",
-    "node-sass": "^4.2.0",
+    "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.2",
     "strip-loader": "^0.1.2",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dashboard": "^0.2.1",
+    "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack-hot-middleware": "^2.17.1"
   },
   "repository": {
     "type": "git",
