--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack2-react-sass-env-boilerplate",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "index.js",
   "private": false,
   "dependencies": {
@@ -8,6 +8,7 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-class-properties": "6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.0",
     "babel-preset-react": "^6.23.0",
