Fixed formatting of targets: browsers

--- a/.babelrc
+++ b/.babelrc
@@ -21,9 +21,7 @@
             "modules": false,
             "useBuiltIns": true,
             "targets": {
-              "browsers": {
-                "chrome": ">=56"
-              }
+              "browsers": ["chrome >= 56"]
             }
           }
         ]
