--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
           }
         ]
       ],
-      "plugins": ["transform-decorators-legacy", "transform-class-properties"]
+      "plugins": ["transform-decorators-legacy"]
     },
     "development": {
       "presets": ["stage-0", "react", [
@@ -28,8 +28,7 @@
       ],
       "plugins": [
         "react-hot-loader/babel",
-        "transform-decorators-legacy",
-        "transform-class-properties"
+        "transform-decorators-legacy"
       ]
     },
     "cli": {
@@ -43,7 +42,7 @@
           }
         ]
       ],
-      "plugins": ["transform-decorators-legacy", "transform-class-properties"]
+      "plugins": ["transform-decorators-legacy"]
     }
   }
 }
