--- a/.babelrc
+++ b/.babelrc
@@ -44,6 +44,7 @@
           "env", {
             "debug": true,
             "modules": false,
+            "useBuiltIns": true,
             "targets": {
               "node": "current"
             }
