--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack2-react-sass-env-boilerplate",
-  "version": "0.1.14",
+  "version": "0.2.0",
   "main": "index.js",
   "private": false,
   "dependencies": {
@@ -18,6 +18,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "group-css-media-queries-loader": "^1.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "modernizr-webpack-plugin": "^1.0.5",
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
