--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
   "name": "webpack2-react-sass-env-boilerplate",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "index.js",
   "private": false,
   "dependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.22.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^3.2.4",
+    "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
     "group-css-media-queries-loader": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
     "modernizr-webpack-plugin": "^1.0.5",
-    "node-sass": "^4.5.0",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "node-sass": "^4.5.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "^6.0.3",
     "strip-loader": "^0.1.2",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "repository": {
     "type": "git",
